# dragoman

./: .gitignore  Cargo.toml  README.md  build.rs  com.front-matter.dragoman.plist  dragoman.service
Formula/: dragoman.rb
site/: config.toml
site/content/: _index.md
site/public/: index.html
site/templates/: index.html
src/: db.rs  error.rs  main.rs  negotiate.rs
ui/: .env  components.json  index.html  jsconfig.json  package.json  pnpm-lock.yaml  vite.config.js
ui/src/: App.svelte  app.css
ui/src/lib/: i18n.js
ui/src/lib/components/ui/button/: button.svelte
ui/src/lib/components/ui/card/: card-content.svelte  card-description.svelte  card-header.svelte  card-title.svelte  card.svelte  index.js
ui/src/lib/components/ui/input/: input.svelte
ui/src/lib/components/ui/select/: index.js  select.svelte
ui/src/lib/components/ui/table/: index.js  table-body.svelte  table-caption.svelte  table-cell.svelte  table-head.svelte  table-header.svelte  table-row.svelte  table.svelte
ui/src/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  nl.json  pt.json  sv.json  zh.json
