[package]
name = "dragoman"
version = "0.1.0"
edition = "2024"
authors = ["Front Matter <info@front-matter.de>"]
description = "PID redirection and content negotiation server"
license = "MIT"
repository = "https://github.com/front-matter/dragoman"

[[bin]]
name = "dragoman"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
commonmeta = { path = "../commonmeta-rs" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive", "env"] }
libsql = { version = "0.9", default-features = false, features = ["core"] }
serde_json = "1"
