[package]
name = "dragoman"
version = "0.2.3"
edition = "2024"
authors = ["Front Matter <info@front-matter.de>"]
description = "DOI redirection and content negotiation server"
license = "MIT"
repository = "https://github.com/front-matter/dragoman"

[[bin]]
name = "dragoman"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
commonmeta = "0.7.2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.32", features = ["bundled-full"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
